[gd_scene load_steps=9 format=3 uid="uid://7mcvm0loirk"]

[ext_resource type="Script" uid="uid://pdx4jnx8pd63" path="res://hud/menu_controller.gd" id="1_qln68"]
[ext_resource type="PackedScene" uid="uid://bwjkhynp2wy7f" path="res://hud/main_menu.tscn" id="2_remlu"]
[ext_resource type="PackedScene" uid="uid://b3q6ra1le5vl5" path="res://hud/list_editor_scene.tscn" id="3_hi8bn"]
[ext_resource type="PackedScene" uid="uid://c8m01tw56ovff" path="res://hud/race_setup_menu.tscn" id="4_0ktcg"]
[ext_resource type="PackedScene" uid="uid://c7odapil05vte" path="res://hud/race_scene.tscn" id="5_wj0iw"]
[ext_resource type="PackedScene" uid="uid://dwkhgddpt8idc" path="res://hud/post_race_menu.tscn" id="6_mmt8c"]
[ext_resource type="PackedScene" uid="uid://cy2upw5jpfq6v" path="res://hud/options_menu.tscn" id="7_v04ml"]
[ext_resource type="PackedScene" uid="uid://t1g6vmxn76at" path="res://hud/credits_menu.tscn" id="8_0pq88"]

[node name="MenuController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qln68")

[node name="MainMenu" parent="." instance=ExtResource("2_remlu")]
layout_mode = 1

[node name="ListEditorScene" parent="." instance=ExtResource("3_hi8bn")]
visible = false
layout_mode = 1

[node name="RaceSetupMenu" parent="." instance=ExtResource("4_0ktcg")]
visible = false
layout_mode = 1

[node name="RaceScene" parent="." instance=ExtResource("5_wj0iw")]
visible = false
layout_mode = 1

[node name="PostRaceMenu" parent="." instance=ExtResource("6_mmt8c")]
visible = false
layout_mode = 1

[node name="OptionsMenu" parent="." instance=ExtResource("7_v04ml")]
visible = false
layout_mode = 1

[node name="CreditsMenu" parent="." instance=ExtResource("8_0pq88")]
visible = false
layout_mode = 1
